<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="aE_Mode" Id="{c21e9aec-a197-4c7c-9a2c-fe675826180b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE aE_Mode :
(
	Manual := 1,
	Auto := 2,
	Service := 3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>