<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="PnID2" Id="{10f77e3b-7018-4648-a34b-0c0909467aaf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PnID2
VAR
	ForceFan1: aFb_Motor;
	ForceFan2: aFb_Motor;
	ForceFan3: aFb_Motor;
	CondensePump: aFb_Motor;
	SupplyPump: aFb_Motor;
	CircularPump: aFb_Motor;
	LPHeaterValve: aFb_Valve;
	AirEjectorValve: aFb_Valve;
	HPHeaterValve: aFb_Valve;
	TurbineValve: aFb_Valve;
	
	
	ForceFan1_PID: FB_BasicPID;
	ForceFan2_PID: FB_BasicPID;
	ForceFan3_PID: FB_BasicPID;
	CondensePump_Press_PID: FB_BasicPID;
	SupplyPump_Press_PID: FB_BasicPID;
	Condenser_Temp_PID: FB_BasicPID;
	LPHeater_Temp_PID: FB_BasicPID;
	AirEjector_Temp_PID: FB_BasicPID;
	HPHeater_Temp_PID: FB_BasicPID;
	Turbine_Speed_PID: FB_BasicPID;
	Furnace_Temp_PID: FB_BasicPID;

	start: BOOL;
	stop: BOOL;
	setpoint: REAL := 0.266;
	setpoint2: REAL := 28;
	setpoint3: REAL := 167;
	setpoint4: REAL := 37.85; //200,12.5,0.3,0.05
	setpoint5: REAL := 141.3;
	setpoint6: REAL := 200;
	setpoint7: REAL := 295;
	setpoint8: REAL := 3000;
	setpoint9: REAL := 566;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Control all components in the P&ID 

//Pumps
{region "Condense Pump"}
CondensePump_Press_PID(fSetpointValue := setpoint2,
						fActualValue := Streams.InStream.CondensePump_Press,
						bReset := NOT CondensePump.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_CondensePump_Press.Kp,
						fTn := Parameters.PID_CondensePump_Press.Ti,
						fTv := Parameters.PID_CondensePump_Press.Td,
						fTd := Parameters.PID_CondensePump_Press.Tn);
CondensePump(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := CondensePump_Press_PID.fCtrlOutput,
				RunFeedback := CondensePump.Cmd,
				Maxspeed := Parameters.MaxSpeed_CondensePump,
				Speed => Streams.OutStream.CondensePump_SetSpeed);
{endregion}

{region "Supply Pump"}
SupplyPump_Press_PID(fSetpointValue := setpoint3,
						fActualValue := Streams.InStream.SupplyPump_Press,
						bReset := NOT SupplyPump.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_SupplyPump_Press.Kp,
						fTn := Parameters.PID_SupplyPump_Press.Ti,
						fTv := Parameters.PID_SupplyPump_Press.Td,
						fTd := Parameters.PID_SupplyPump_Press.Tn);
SupplyPump(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := SupplyPump_Press_PID.fCtrlOutput,
				RunFeedback := SupplyPump.Cmd,
				Maxspeed := Parameters.MaxSpeed_SupplyPump,
				Speed => Streams.OutStream.SupplyPump_SetSpeed);
{endregion}
	 
{region "Circular Pump"}
Condenser_Temp_PID(fSetpointValue := setpoint4,
						fActualValue := Streams.InStream.Condenser_Temp,
						bReset := NOT CircularPump.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_Condenser_Temp.Kp,
						fTn := Parameters.PID_Condenser_Temp.Ti,
						fTv := Parameters.PID_Condenser_Temp.Td,
						fTd := Parameters.PID_Condenser_Temp.Tn);
CircularPump(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := Condenser_Temp_PID.fCtrlOutput,
				RunFeedback := CircularPump.Cmd,
				Maxspeed := Parameters.MaxSpeed_CircularPump,
				Speed => Streams.OutStream.CircularPump_SetSpeed);
{endregion}


//Valves
{region "Low Pressure Heater Valve"}
LPHeater_Temp_PID(fSetpointValue := setpoint5,
						fActualValue := Streams.InStream.LPHeater_Temp,
						bReset := NOT LPHeaterValve.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_LPHeater_Temp.Kp,
						fTn := Parameters.PID_LPHeater_Temp.Ti,
						fTv := Parameters.PID_LPHeater_Temp.Td,
						fTd := Parameters.PID_LPHeater_Temp.Tn);
LPHeaterValve(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				PercentCondition := LPHeater_Temp_PID.fCtrlOutput,
				RunFeedback := LPHeaterValve.Cmd,
				OpenPercent => Streams.OutStream.LPHeaterValve_SetPercent);
{endregion}
	 
{region "Deaerator"}
AirEjector_Temp_PID(fSetpointValue := setpoint6,
						fActualValue := Streams.InStream.AirEjector_Temp,
						bReset := NOT AirEjectorValve.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_AirEjector_Temp.Kp,
						fTn := Parameters.PID_AirEjector_Temp.Ti,
						fTv := Parameters.PID_AirEjector_Temp.Td,
						fTd := Parameters.PID_AirEjector_Temp.Tn);
AirEjectorValve(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				PercentCondition := AirEjector_Temp_PID.fCtrlOutput,
				RunFeedback := AirEjectorValve.Cmd,
				OpenPercent => Streams.OutStream.AirEjectorValve_SetPercent);
{endregion}
{region "High Pressure Heater Valve"}
HPHeater_Temp_PID(fSetpointValue := setpoint7,
						fActualValue := Streams.InStream.HPHeater_Temp,
						bReset := NOT HPHeaterValve.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_HPHeater_Temp.Kp,
						fTn := Parameters.PID_HPHeater_Temp.Ti,
						fTv := Parameters.PID_HPHeater_Temp.Td,
						fTd := Parameters.PID_HPHeater_Temp.Tn);
HPHeaterValve(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				PercentCondition := HPHeater_Temp_PID.fCtrlOutput,
				RunFeedback := HPHeaterValve.Cmd,
				OpenPercent => Streams.OutStream.HPHeaterValve_SetPercent);
{endregion}
{region "Turbine Valve"}
Turbine_Speed_PID(fSetpointValue := setpoint8,
						fActualValue := Streams.InStream.Turbine_Rotation,
						bReset := NOT TurbineValve.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_Turbine_Speed.Kp,
						fTn := Parameters.PID_Turbine_Speed.Ti,
						fTv := Parameters.PID_Turbine_Speed.Td,
						fTd := Parameters.PID_Turbine_Speed.Tn);
TurbineValve(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				PercentCondition := Turbine_Speed_PID.fCtrlOutput,
				RunFeedback := TurbineValve.Cmd,
				OpenPercent => Streams.OutStream.TurbineValve_SetPercent);
{endregion}


//Fans
{region "ForceFan1"}
Furnace_Temp_PID(fSetpointValue := setpoint9,
						fActualValue := Streams.InStream.Furnace_Temp,
						bReset := NOT ForceFan1.Cmd,
						fCtrlCycleTime := Parameters.SampleTime,
						fKp := Parameters.PID_Furnace_Temp.Kp,
						fTn := Parameters.PID_Furnace_Temp.Ti,
						fTv := Parameters.PID_Furnace_Temp.Td,
						fTd := Parameters.PID_Furnace_Temp.Tn);
ForceFan1(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := Furnace_Temp_PID.fCtrlOutput,
				RunFeedback := ForceFan1.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan1,
				Speed => Streams.OutStream.ForceFan1_SetSpeed);
{endregion}
	 
{region "ForceFan2"}
ForceFan2(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := Furnace_Temp_PID.fCtrlOutput,
				RunFeedback := ForceFan2.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan2,
				Speed => Streams.OutStream.ForceFan2_SetSpeed);
{endregion}
{region "ForceFan3"}
ForceFan3(RunCondition := start,
				Mode:= aE_Mode.Auto,
				StopCondition := stop,
				SpeedCondition := Furnace_Temp_PID.fCtrlOutput,
				RunFeedback := ForceFan3.Cmd,
				Maxspeed := Parameters.MaxSpeed_ForceFan3,
				Speed => Streams.OutStream.ForceFan3_SetSpeed);
{endregion}
]]></ST>
    </Implementation>
    <LineIds Name="PnID2">
      <LineId Id="5" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="47" Count="8" />
      <LineId Id="64" Count="0" />
      <LineId Id="56" Count="3" />
      <LineId Id="62" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="120" Count="0" />
      <LineId Id="68" Count="13" />
      <LineId Id="61" Count="0" />
      <LineId Id="123" Count="1" />
      <LineId Id="126" Count="17" />
      <LineId Id="216" Count="0" />
      <LineId Id="145" Count="14" />
      <LineId Id="161" Count="1" />
      <LineId Id="179" Count="0" />
      <LineId Id="163" Count="15" />
      <LineId Id="182" Count="15" />
      <LineId Id="199" Count="15" />
      <LineId Id="217" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="220" Count="17" />
      <LineId Id="257" Count="0" />
      <LineId Id="266" Count="16" />
      <LineId Id="219" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>